--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=root33pass
 server.contextPath=/swagger2-demo
 
-#spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date=yyyy-MM-dd
 #spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 #spring.mvc.format.time=HH:mm:ss
 
